--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@ a:focus {
   text-decoration: underline;
 }
 
+ul {
+  list-style: none;
+  padding-inline-start: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
